slopegraph vertical alignment fix

--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -287,7 +287,7 @@ svg {
 	top: var(--chart-overlay-stage-top, 10vh);
 	height: var(--chart-overlay-stage-height, 80vh);
 	display: flex;
-	align-items: center;
+	align-items: flex-start;
 	z-index: 1;
 }
 
